# myenergi-domoticz-plugin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  allocation.py  cli_smoke.py  config.py  control.py  domoticz_api.py  energy.py  index.html  mkdocs.yml  model.py  myenergi_client.py  persistence.py  planner.py  plugin.py  pyproject.toml  requirements-dev.txt  sanitize.py  sitemap.xml  translations.py
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml
about/: index.html
control/: index.html
devices/: index.html
docs/: about.md  control.md  devices.md  faq.md  index.md  install.md  internals.md  security.md  settings.md
docs/stylesheets/: extra.css
faq/: index.html
install/: index.html
internals/: index.html
search/: search_index.json
security/: index.html
settings/: index.html
tests/: conftest.py  domoticz_stub.py  test_allocation.py  test_client.py  test_config.py  test_control_decide.py  test_control_menus.py  test_control_optimistic.py  test_control_persist_setpoint.py  test_control_predicates.py  test_control_reconcile.py  test_control_validators.py  test_conversions.py  test_domoticz_api_apply.py  test_domoticz_api_log.py  test_domoticz_api_state.py  test_domoticz_stub.py  test_energy_backfill.py  test_energy_clamp.py  test_energy_home.py  test_feed_mapping.py  test_harvi_names.py  test_model_jday.py  test_model_jstatus.py  test_persistence.py  test_planner_baseline.py  test_planner_energy.py  test_planner_harvi.py  test_planner_plan.py  test_planner_real_api.py  test_plugin_heartbeat.py  test_plugin_oncommand.py  test_plugin_onstart.py  test_sanitize.py  test_translations.py
tests/fixtures/: jday.json  jday_real.json  jstatus.json  jstatus_real.json
tools/: cli_smoke.py
