[project]
name = "myenergi-domoticz-plugin"
version = "1.0.0"
description = "myenergi (zappi/harvi) monitoring plugin for Domoticz"
requires-python = ">=3.9"

[tool.ruff]
# UP (pyupgrade) intentionally omitted: the 3.9 floor forbids proposing
# X | Y unions / builtins-as-generics that break at runtime on that floor.
target-version = "py39"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
# plugin.py docstring is XML manifest with exact long lines per spec
per-file-ignores = { "plugin.py" = ["E501"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=. --cov-report=term-missing"

[tool.pyright]
include = ["."]
exclude = ["tests", "docs", "_temp"]
# Flat plugin layout: modules import their siblings by bare name (e.g.
# `import sanitize`). extraPaths puts the repo root on the import search path so
# pyright resolves those imports in both source and (editor-analysed) tests.
extraPaths = ["."]
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.coverage.run]
omit = ["tests/*", "cli_smoke.py"]
